# xiaozhi-esp32

main/: CMakeLists.txt  Kconfig.projbuild  application.cc  main.cc
main/boards/common/: wifi_board.cc  wifi_board.h
main/boards/movecall-moji-esp32s3-blufi/: CMakeLists.txt  blufi_example.h  blufi_example_helpers.c  blufi_example_helpers.h  blufi_helper.h  blufi_init.c  blufi_security.c  config.h  config.json  doit_blufi.cc  doit_blufi.h  doit_blufi_init.c  movecall_moji_esp32s3_blufi.cc
main/boards/movecall-moji-esp32s3_blufi/: blufi_init.c  blufi_security.c  config.h  movecall_moji_esp32s3.cc
main/boards/movecall-moji-esp32s3_blufi/example/: blufi_init.c
